// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should support maxLength 1`] = `
<Input
  disabled={false}
  maxLength="3"
  readOnly={false}
  showLengthInfo={true}
  showPasswordEye={false}
  type="text"
  underline={true}
>
  <span
    className="c7n-input-wrapper"
  >
    <div
      className="c7n-input-content"
    >
      <div
        className="c7n-input-rendered-wrapper"
      >
        <div
          className="c7n-input-rendered"
        >
          <div
            className="c7n-input-placeholder"
          />
          <input
            className="c7n-input"
            disabled={false}
            maxLength="3"
            onBlur={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            readOnly={false}
            type="text"
          />
        </div>
      </div>
      <span
        className="c7n-input-icon"
      >
        <span
          className="c7n-input-icon-copy c7n-input-length-info"
        >
          0/3
        </span>
      </span>
    </div>
    <div
      className="c7n-input-underline"
    >
      <span
        className="c7n-input-ripple"
      />
    </div>
  </span>
</Input>
`;

exports[`Input.Search should support suffix 1`] = `
<Search
  enterButton={false}
  size="small"
  suffix="suffix"
>
  <Input
    className="c7n-input-search c7n-input-search-small"
    disabled={false}
    onPressEnter={[Function]}
    prefixCls="c7n-input"
    readOnly={false}
    showLengthInfo={true}
    showPasswordEye={false}
    size="small"
    suffix={
      Array [
        "suffix",
        <Button
          funcType="flat"
          ghost={false}
          icon="search"
          loading={false}
          shape="circle"
          size="small"
          type="primary"
        />,
      ]
    }
    type="text"
    underline={true}
  >
    <span
      className="c7n-input-wrapper c7n-input-has-suffix"
    >
      <div
        className="c7n-input-content"
      >
        <div
          className="c7n-input-rendered-wrapper"
        >
          <div
            className="c7n-input-rendered c7n-input-rendered-sm"
          >
            <div
              className="c7n-input-placeholder"
            />
            <input
              className="c7n-input c7n-input-sm c7n-input-search c7n-input-search-small"
              disabled={false}
              onBlur={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
              type="text"
            />
          </div>
          <span
            className="c7n-input-suffix c7n-input-suffix-sm"
          >
            suffix
            <Button
              funcType="flat"
              ghost={false}
              icon="search"
              loading={false}
              shape="circle"
              size="small"
              type="primary"
            >
              <Ripple>
                <RippleChild
                  key=".0"
                  prefixCls="c7n-ripple"
                >
                  <MouseDown
                    rippleChild={
                      <button
                        className="c7n-btn c7n-btn-primary c7n-btn-circle c7n-btn-sm c7n-btn-icon-only c7n-btn-flat"
                        onClick={[Function]}
                        type="button"
                      >
                        <Icon
                          type="search"
                        />
                      </button>
                    }
                  >
                    <button
                      className="c7n-btn c7n-btn-primary c7n-btn-circle c7n-btn-sm c7n-btn-icon-only c7n-btn-flat"
                      onClick={[Function]}
                      onMouseDown={[Function]}
                      type="button"
                    >
                      <Icon
                        type="search"
                      >
                        <i
                          className="icon icon-search"
                        />
                      </Icon>
                      <Animate
                        animation={Object {}}
                        component="div"
                        componentProps={
                          Object {
                            "className": "c7n-ripple-wrapper",
                          }
                        }
                        hiddenProp="hidden"
                        key="ripple"
                        transitionAppear={false}
                        transitionEnter={true}
                        transitionLeave={true}
                        transitionName="fade"
                      >
                        <div
                          className="c7n-ripple-wrapper"
                        />
                      </Animate>
                    </button>
                  </MouseDown>
                </RippleChild>
              </Ripple>
            </Button>
          </span>
        </div>
      </div>
      <div
        className="c7n-input-underline"
      >
        <span
          className="c7n-input-ripple"
        />
      </div>
    </span>
  </Input>
</Search>
`;

exports[`TextArea should support disabled 1`] = `
<TextArea
  disabled={true}
  showLengthInfo={true}
  underline={true}
>
  <span
    className="c7n-input-wrapper c7n-input-textarea c7n-input-disabled"
  >
    <textarea
      className="c7n-input"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onInput={[Function]}
      onKeyDown={[Function]}
      style={Object {}}
    />
    <div>
      <hr
        className="c7n-input-border"
      />
      <hr
        className="c7n-input-border-active"
      />
    </div>
  </span>
</TextArea>
`;

exports[`TextArea should support maxLength 1`] = `
<TextArea
  maxLength="10"
  showLengthInfo={true}
  underline={true}
>
  <span
    className="c7n-input-wrapper c7n-input-textarea"
  >
    <textarea
      className="c7n-input"
      maxLength="10"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onInput={[Function]}
      onKeyDown={[Function]}
      style={Object {}}
    />
    <div>
      <hr
        className="c7n-input-border"
      />
      <hr
        className="c7n-input-border-active"
      />
    </div>
    <div
      className="c7n-input-length-info"
    >
      0/10
    </div>
  </span>
</TextArea>
`;
